remove alt text for decorative images and fix contrast

--- a/frontend/src/components/FormElements/formelements.module.css
+++ b/frontend/src/components/FormElements/formelements.module.css
@@ -56,7 +56,7 @@
   border: none;
 }
 .primaryBtn:focus{
-  box-shadow: 0 0 0 3px #0084F4;
+  box-shadow: 0 0 0 3px #0075DB;
 }
 .secondaryBtn {
   background-color: white;
@@ -64,7 +64,7 @@
   box-sizing: border-box;
 }
 .secondaryBtn:focus{
-  box-shadow: 0 0 0 3px #0084F4;
+  box-shadow: 0 0 0 3px #0075DB;
 }
 
 .srlabel{
